# hostspace-devops-project

./: .gitignore  Makefile  README.md  skaffold.yaml
.env/: core.env.example  infra.env.example  web.env.example
.github/workflows/: app-deploy.yaml  infra-deploy.yaml
app-chart/: dev-values.yaml  prod-values.yaml  stg-values.yaml
app-chart/templates/: 01-postgresdb-secrets.yaml  01-storage-class.yaml  02-postgres-db.yaml  02-postgres-pvc.yaml  03-postgresdb-secrets.yaml  03-postgresdb-svc.yaml  04-create-db-job.yaml  04-postgres-db.yaml  05-admin-api-deployment.yaml  05-postgresdb-svc.yaml  06-student-api-deployment.yaml  07-teacher-api-deployment.yaml  admin-api-deployment.yaml  admin-api-svc.yaml  create-db-job.yaml  ingress.yaml  web-svc.yaml  (+8 more)
app-deployment/: dev-deploy.yaml  prod-deploy.yaml  stg-deploy.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/admin/: database.py  main.py  services.py
backend/src/school_app/admin/: alembic.ini  database.py  main.py  models.py  schemas.py  services.py
backend/src/school_app/core/: config.py
backend/src/school_app/student/: database.py  main.py  models.py  schemas.py  services.py
backend/src/school_app/teacher/: alembic.ini  database.py  main.py  models.py  services.py
backend/src/student/: database.py  main.py  models.py  services.py
backend/src/teacher/: database.py  main.py  models.py  schemas.py  services.py
frontend/: Dockerfile  nginx.conf  package-lock.json
terraform-deployment/: backend.tf  main.tf  providers.tf  variables.tf
utils/: seal_secrets.py  sealed-secret.yaml
(+51 files in other folders)
